[package]
name = "graph_contact_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
neo4rs ="0.6.0"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4", 
]

